--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
@@ -1,6 +1,6 @@
 <div id="upload">
     <input class="file" type="file" name="file"/>
-    <div class="row container_text">
+    <div class="row container_box">
         <div class="col-md-12">
             <div class="bg-warning text">
                 <i id="upload_text_close" class="fa fa-close"></i>
@@ -10,12 +10,12 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="container_controls">
-            <div class="col-md-7">
+    <div class="row container_controls">
+        <div class="col-md-12">
+            <div class="container_progressBar">
                 {{-include("UebusaitoBundle::include/progressBar.html.twig")-}}
             </div>
-            <div class="col-md-5 horizontal_right">
+            <div class="container_buttons">
                 <p class="btn btn-success button_1"><i class="fa fa-play"></i> <span>{% trans %}upload_1{% endtrans %}</span></p>
                 <p class="btn btn-danger button_2"><i class="fa fa-stop"></i> <span>{% trans %}upload_2{% endtrans %}</span></p>
             </div>
