--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile.html.twig
@@ -1,7 +1,7 @@
 {% form_theme form "bootstrap_3_layout.html.twig" %}
 
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-6">
         <h3>{% trans %}profile_1{% endtrans %}</h3>
         <form id="form_cp_profile" action="{{path("cp_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <fieldset class="accordion_container">
@@ -42,7 +42,7 @@
                     {{form_row(form.born, {'label': "profile_8"})}}
                     {{form_row(form.gender, {'label': "profile_9"})}}
 
-                    {% if (form.fiscalCode.vars.value != "") %}
+                    {% if form.fiscalCode.vars.value != "" %}
                         {{form_row(form.fiscalCode, {'label': "profile_10"})}}
                         {{form_row(form.companyName, {'label': "profile_11"})}}
                         {{form_row(form.vat, {'label': "profile_12"})}}
