--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/registration.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/registration.html.twig
@@ -13,7 +13,7 @@
     </ul>
     <div class="page_container clearfix">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <h3 class="margin_clear">{% trans %}registration_3{% endtrans %}</h3>
                 <form id="form_user_registration" class="margin_top" action="{{path("registration", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                     <div class="form-group">
@@ -41,7 +41,7 @@
                     {{form_row(form.born, {'label': "registration_9"})}}
                     {{form_row(form.gender, {'label': "registration_10"})}}
 
-                    {% if (urlExtra == "company") %}
+                    {% if urlExtra == "company" %}
                         {{form_row(form.fiscalCode, {'label': "registration_11"})}}
                         {{form_row(form.companyName, {'label': "registration_12"})}}
                         {{form_row(form.vat, {'label': "registration_13"})}}
