--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/utility.scss
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/utility.scss
@@ -298,6 +298,35 @@ legend {
     }
 }
 
+.rotate_45 {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.rotate_135 {
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+.rotate_225 {
+    -webkit-transform: rotate(225deg);
+    -moz-transform: rotate(225deg);
+    -ms-transform: rotate(225deg);
+    -o-transform: rotate(225deg);
+    transform: rotate(225deg);
+}
+.rotate_315 {
+    -webkit-transform: rotate(315deg);
+    -moz-transform: rotate(315deg);
+    -ms-transform: rotate(315deg);
+    -o-transform: rotate(315deg);
+    transform: rotate(315deg);
+}
+
 #backdrop {
     position: fixed;
     top: 0;
@@ -413,6 +442,8 @@ legend {
 }
 
 #upload {
+    display: none;
+    
     .file {
         margin-bottom: 5px;
     }
