Code - Work in progress

--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
@@ -22,3 +22,13 @@
         </div>
     </div>
 </div>
+<script>
+    var textUpload = {
+        'uploadTextA': "{{"upload_3"|trans}}",
+        'uploadTextB': "{{"upload_4"|trans}}",
+        'uploadTextC': "{{"upload_5"|trans}}",
+        'uploadButtonA': "{{"upload_6"|trans}}",
+        'uploadButtonB': "{{"upload_7"|trans}}",
+        'uploadButtonC': "{{"upload_8"|trans}}"
+    };
+</script>
