--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel.html.twig
@@ -115,3 +115,33 @@
         {% endif %}
     {% endif %}
 </div>
+<script>
+    var textPayment = {
+        'deletePayment': "{{"control_panel_15"|trans}}",
+        'deleteAllPayments': "{{"control_panel_16"|trans}}"
+    };
+    
+    var textPage = {
+        'deletePage': "{{"control_panel_17"|trans}}",
+        'deleteAllPages': "{{"control_panel_18"|trans}}"
+    };
+    
+    var textUser = {
+        'deleteUser': "{{"control_panel_19"|trans}}",
+        'deleteAllUsers': "{{"control_panel_20"|trans}}"
+    };
+    
+    var textModule = {
+        'deleteModule': "{{"control_panel_21"|trans}}",
+        'deleteAllModules': "{{"control_panel_22"|trans}}"
+    };
+    
+    var textRole = {
+        'deleteRole': "{{"control_panel_23"|trans}}",
+        'deleteAllRoles': "{{"control_panel_24"|trans}}"
+    };
+    
+    var textSetting = {
+        'deleteLanguageManage': "{{"control_panel_25"|trans}}"
+    };
+</script>
