--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/utility.scss
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/utility.scss
@@ -227,6 +227,9 @@ legend {
         border: none !important;
     }
 }
+.table_min_height {
+    min-height: 120px;
+}
 .table_spinner {
     position: relative;
     top: 55px;
