--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/modules_selection_desktop.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/modules_selection_desktop.html.twig
@@ -1,41 +1,43 @@
 {{-include("UebusaitoBundle::include/table.html.twig")-}}
 
-<table class="table table-bordered table-striped">
-    <thead class="table_thead">
-        <tr>
-            <th class="cursor_pointer">
-                {% trans %}modules_selection_desktop_1{% endtrans %}
-                <i class="fa fa-caret-down"></i>
-                <i class="fa fa-caret-up"></i>
-            </th>
-            <th class="cursor_pointer">
-                {% trans %}modules_selection_desktop_2{% endtrans %}
-                <i class="fa fa-caret-down"></i>
-                <i class="fa fa-caret-up"></i>
-            </th>
-            <th class="cursor_pointer">
-                {% trans %}modules_selection_desktop_3{% endtrans %}
-                <i class="fa fa-caret-down"></i>
-                <i class="fa fa-caret-up"></i>
-            </th>
-            <th class="cursor_pointer">
-                {% trans %}modules_selection_desktop_4{% endtrans %}
-                <i class="fa fa-caret-down"></i>
-                <i class="fa fa-caret-up"></i>
-            </th>
-            <th class="cursor_pointer">
-                {% trans %}modules_selection_desktop_5{% endtrans %}
-                <i class="fa fa-caret-down"></i>
-                <i class="fa fa-caret-up"></i>
-            </th>
-            <th class="cursor_pointer">
-                {% trans %}modules_selection_desktop_6{% endtrans %}
-                <i class="fa fa-caret-down"></i>
-                <i class="fa fa-caret-up"></i>
-            </th>
-        </tr>
-    </thead>
-    <tbody class="table_tbody">
-        {{response.values.list|raw}}
-    </tbody>
-</table>
+<div class="overflow_y_hidden table_min_height">
+    <table class="table table-bordered table-striped">
+        <thead class="table_thead">
+            <tr>
+                <th class="cursor_pointer">
+                    {% trans %}modules_selection_desktop_1{% endtrans %}
+                    <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-caret-up"></i>
+                </th>
+                <th class="cursor_pointer">
+                    {% trans %}modules_selection_desktop_2{% endtrans %}
+                    <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-caret-up"></i>
+                </th>
+                <th class="cursor_pointer">
+                    {% trans %}modules_selection_desktop_3{% endtrans %}
+                    <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-caret-up"></i>
+                </th>
+                <th class="cursor_pointer">
+                    {% trans %}modules_selection_desktop_4{% endtrans %}
+                    <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-caret-up"></i>
+                </th>
+                <th class="cursor_pointer">
+                    {% trans %}modules_selection_desktop_5{% endtrans %}
+                    <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-caret-up"></i>
+                </th>
+                <th class="cursor_pointer">
+                    {% trans %}modules_selection_desktop_6{% endtrans %}
+                    <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-caret-up"></i>
+                </th>
+            </tr>
+        </thead>
+        <tbody class="table_tbody">
+            {{response.values.list|raw}}
+        </tbody>
+    </table>
+</div>
