--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/users_selection_desktop.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/users_selection_desktop.html.twig
@@ -1,6 +1,6 @@
 {{-include("UebusaitoBundle::include/table.html.twig")-}}
 
-<div class="overflow_y_hidden">
+<div class="overflow_y_hidden table_min_height">
     <table class="table table-bordered table-striped">
         <thead class="table_thead">
             <tr>
