Update - Prepare for update symfony version

--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -110,6 +110,7 @@
 {% endblock %}
 
 {% block javascript %}
+    {{dump(php_session)}}
     <!-- Javascript -->
     <script type="text/javascript">
         var session = {
